# aws-rds-signer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  test.sh
.github/workflows/: ci.yml
src/: lib.rs  sign.rs  test.rs
