[package]
name = "aws-rds-signer"
version = "0.1.0"
edition = "2021"
keywords = [
  "aws",
  "db",
  "rds",
  "signer",
  "iam",
  "database",
  "auth",
  "postgres",
  "token",
]

[lib]
crate-type = ["lib"]

[dependencies]
aws-config = "1.6.0"
aws-credential-types = "1.2.2"
aws-sigv4 = "1.3.0"
url = "2.4.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
