[package]
name = "aws-rds-signer"
version = "0.1.0"
authors = ["Michael Cervantes"]
description = "A Rust library for generating AWS IAM authentication tokens for Amazon RDS database connections"
repository = "https://github.com/wnml-org/aws-rds-signer"
license = "MIT"
readme = "README.md"
edition = "2021"
categories = ["authentication", "database", "api-bindings", "rust-patterns"]
keywords = [
  "aws",
  "rds",
  "iam",
  "database",
  "postgres",
]

[lib]
crate-type = ["lib"]

[dependencies]
aws-config = "1.6.0"
aws-credential-types = "1.2.2"
aws-sigv4 = "1.3.0"
url = "2.4.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
