[package]
name = "aws-rds-signer"
version = "0.2.0"
authors = ["Michael Cervantes"]
description = "A Rust library for generating AWS IAM authentication tokens for Amazon RDS database connections"
repository = "https://github.com/wnml-org/aws-rds-signer"
license = "MIT"
readme = "README.md"
edition = "2021"
categories = ["authentication", "database", "api-bindings", "rust-patterns"]
keywords = [
  "aws",
  "rds",
  "iam",
  "database",
  "postgres",
]
# Add resolver v2 to help with dependency resolution
resolver = "2"

[lib]
crate-type = ["lib"]

[dependencies]
aws-config = { version = "1" }
aws-credential-types = "1"
aws-sigv4 = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = "deny"
nursery = "warn"
cargo = "warn"
complexity = "warn"
perf = "warn"
style = "deny"
suspicious = "deny"
